<resources>
    <string name="app_name">Олимпиадникъ</string>
    <string name="astro">Астрономия</string>
    <string name="english">Английский язык</string>
    <string name="bio">Биология</string>
    <string name="geogr">География</string>
    <string name="inf">Информатика</string>
    <string name="title">Предметы ВСОШ</string>
    <string name="mhk">Искусство(МХК)</string>
    <string name="spanish">Испанский язык</string>
    <string name="his">История</string>
    <string name="ital">Итальянский язык</string>
    <string name="chin">Китайский язык</string>
    <string name="lit">Литература</string>
    <string name="math">Математика</string>
    <string name="deu">Немецкий язык</string>
    <string name="obch">Обществознание</string>
    <string name="loyal">Право</string>
    <string name="rus">Русский язык</string>
    <string name="phys">Физика</string>
    <string name="chem">Химия</string>
    <string name="eco">Экология</string>
    <string name="econom">Экономика</string>
    <string name="chose">Выбрать</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tochoose">Выберите предметы:</string>
    <string name="instr1">Выбрать предметы для участия можно по нажатию кнопки "Выбрать" в нижнем меню.</string>
    <string name="instr2">Выбранные предметы будут написаны голубым текстом в общем списке. При нажатии на предмет можно просмотреть расписание, и попасть на
    сайт предмета, и регистрацию в ЕСР.</string>
    <string name="instr3">Вы получите уведомление об олимпиаде. В разделе "Напоминания", можно настроить количество дней, за которое к вам придёт напоминание
    (также по умолчанию вам придёт уведомление за один день), а также время, когда напоминание придёт к вам.</string>
    <string name="instr4">Если вы выберете свой класс в меню "Класс", то Вам будут показываться только даты, относящиеся к Вашему классу. Работает от 7 класса включительно</string>
    <string name="instr5">Желаем успеха!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notif">Напоминания</string>
</resources>