<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="98dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="386dp"
        android:layout_height="475dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_shape"
                android:text="@string/astro" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/english" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/bio" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/geogr" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/inf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/mhk" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/spanish" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/his" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/ital" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/chin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/lit" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/math" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/deu" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/obch" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/loyal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/rus" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/phys" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/chem" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/eco" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/button21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:text="@string/econom" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="410dp"
        android:layout_height="59dp"
        android:id="@+id/navmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>